# nano-dist-spec

./: .cursorrules  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
docs/: DEV_LOG.md
examples/: basic_inference.py  speculative_decode.py  tensor_parallel.py
nano_dist_spec/: __init__.py  attention.py  config.py  debug.py  engine.py  kv_cache.py  model.py  parallel.py  sampling.py  scheduler.py  speculative.py  worker.py
profiler/: bench.py  profile_decode.py  vllm_basic_match_bench.py
tests/: test_kv_cache.py  test_model_vs_hf.py  test_parallel.py  test_speculative.py
