[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-dist-spec"
version = "0.1.0"
description = "Minimal distributed inference + speculative decoding framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers",
    "safetensors",
]

[project.optional-dependencies]
dev = ["pytest"]
